# wgram-lm

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  NOTICE  README.md  SECURITY.md  local_s2_comparison_latest.json  probe_B_hybrid_824be1b.py  probe_d123cdc_72.py  probe_d123cdc_72_B_forced_choice.py  probe_d123cdc_72_B_results.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
configs/: hf_distill_datasets.yaml  qtrm_82m_local_smoke.yaml  qtrm_82m_ultradata_packed_smoke.yaml  qtrm_82m_ultradata_smoke.yaml  qwen35_2b_4090.yaml  qwen35_2b_4090_answer_decision_head_truthcal_s200.yaml  qwen35_2b_4090_bounded_residual_probe.yaml  qwen35_2b_4090_bounded_residual_studentlm_2k.yaml  qwen35_2b_4090_canonical_answer_governor_preserve_s120.yaml  qwen35_2b_4090_canonical_answer_governor_s120.yaml  qwen35_2b_4090_canonical_answer_preference_s160.yaml  qwen35_2b_4090_canonical_decision_tokens_s120.yaml  qwen35_2b_4090_canonical_greedy_margin_s120.yaml  qwen35_2b_4090_canonical_plain_answer_kiss_s120.yaml  qwen35_2b_4090_canonical_ssot_core_answer_bottleneck_s150.yaml  qwen35_2b_4090_canonical_ssot_core_answer_bottleneck_safe_gate_eval.yaml  qwen35_2b_4090_canonical_ssot_core_answer_bottleneck_selective_gate_s150.yaml  qwen35_2b_4090_canonical_ssot_coretotext_causal_s050.yaml  qwen35_2b_4090_canonical_ssot_coretotext_forced_s150.yaml  qwen35_2b_4090_canonical_ssot_greedy_causal_s050.yaml  qwen35_2b_4090_canonical_ssot_hidden_answer_decision_s200.yaml  qwen35_2b_4090_clean_lm_only_pilot.yaml  qwen35_2b_4090_clean_pilot.yaml  (+214 more)
(+3309 files in other folders)
